# jungfrau-commissioning

./: .pre-commit-config.yaml  README.md  issue02_compare_pedestals.py  issue02_pedestal_evolution.py  issue05_compare_pedestals.py  issue08_first_spike.py  issue11_compare_pedestals.py  issue_variance_histogram.py  pedestal_stats.py  pyproject.toml
lib/: __init__.py  pedestal.py
