[tool.poetry]
name = "jungfrau-commissioning"
version = "0.1.0"
description = ""
authors = [
    "Nicholas Devenish <ndevenish@gmail.com>",
    "Graeme Winter <graeme.winter@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# E712: Replaces (x == False) with (x is False). Deadly for numpy arrays.
ignore = ["E501", "E741", "E712"]
line-length = 88
select = ["C9", "E", "F", "W", "I"]
unfixable = ["F841"]

